--- a/UmdlaloVirtualGaming/Admin.Master
+++ b/UmdlaloVirtualGaming/Admin.Master
@@ -108,7 +108,7 @@
 							<!--begin::Menu Nav-->
 							<ul class="menu-nav">
 								<li class="menu-item menu-item-active" aria-haspopup="true">
-									<a href="lexturer-dashboard.aspx" class="menu-link">
+									<a href="/Pages/admin/admin-dashboard.aspx" class="menu-link">
 										<span class="svg-icon menu-icon">
 											<!--begin::Svg Icon | path:/Pages/assets/media/svg/icons/Design/Layers.svg-->
 											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
@@ -333,7 +333,7 @@
 											</svg>
 											<!--end::Svg Icon-->
 										</span>
-										<span class="menu-text">Calendar</span>
+										<span class="menu-text">Calendars</span>
 										<i class="menu-arrow"></i>
 									</a>
 							
