--- a/UmdlaloVirtualGaming/Lecturer.Master
+++ b/UmdlaloVirtualGaming/Lecturer.Master
@@ -155,7 +155,7 @@
 										
 											
 											<li class="menu-item" aria-haspopup="true">
-												<a href="lecturer-course-list.aspx" class="menu-link">
+												<a href="/Pages/lecturer/lecturer-course-list.aspx" class="menu-link">
 													<i class="menu-bullet menu-bullet-line">
 														<span></span>
 													</i>
@@ -166,7 +166,7 @@
 												</a>
 											</li>
 											<li class="menu-item" aria-haspopup="true">
-												<a href="lecturer-course-add.aspx" class="menu-link">
+												<a href="/Pages/lecturer/lecturer-course-add.aspx" class="menu-link">
 													<i class="menu-bullet menu-bullet-line">
 														<span></span>
 													</i>
@@ -204,7 +204,7 @@
 										
 											
 											<li class="menu-item" aria-haspopup="true">
-												<a href="lecturer-student-list.aspx" class="menu-link">
+												<a href="/Pages/lecturer/lecturer-student-list.aspx" class="menu-link">
 													<i class="menu-bullet menu-bullet-line">
 														<span></span>
 													</i>
@@ -215,7 +215,7 @@
 												</a>
 											</li>
 											<li class="menu-item" aria-haspopup="true">
-												<a href="lecturer-student-add.aspx" class="menu-link">
+												<a href="/Pages/lecturer/lecturer-student-add.aspx" class="menu-link">
 													<i class="menu-bullet menu-bullet-line">
 														<span></span>
 													</i>
@@ -261,7 +261,7 @@
 
 								</li>
 								<li class="menu-item menu-item-submenu" aria-haspopup="true" data-menu-toggle="hover">
-									<a href="lecturer-calendar-view.aspx" class="menu-link menu-toggle">
+									<a href="/Pages/lecturer/lecturer-calendar-view.aspx" class="menu-link menu-toggle">
 										<span class="svg-icon menu-icon">
 											<!--begin::Svg Icon | path:/Pages/assets/media/svg/icons/Layout/Layout-4-blocks.svg-->
 											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
@@ -303,7 +303,7 @@
 										
 											
 											<li class="menu-item" aria-haspopup="true">
-												<a href="lecturer-assessment-add.aspx" class="menu-link">
+												<a href="/Pages/lecturer/lecturer-assessment-add.aspx" class="menu-link">
 													<i class="menu-bullet menu-bullet-line">
 														<span></span>
 													</i>
@@ -314,7 +314,7 @@
 												</a>
 											</li>
 											<li class="menu-item" aria-haspopup="true">
-												<a href="lecturer-assessment-list.aspx" class="menu-link">
+												<a href="/Pages/lecturer/lecturer-assessment-list.aspx" class="menu-link">
 													<i class="menu-bullet menu-bullet-line">
 														<span></span>
 													</i>
@@ -351,7 +351,7 @@
 												
 										
 											<li class="menu-item" aria-haspopup="true">
-												<a href="lecturer-chat-view.aspx" class="menu-link">
+												<a href="/Pages/lecturer/lecturer-chat-view.aspx" class="menu-link">
 													<i class="menu-bullet menu-bullet-line">
 														<span></span>
 													</i>
@@ -363,7 +363,7 @@
 											</li>
 											
 											<li class="menu-item" aria-haspopup="true">
-												<a href="lecturer-chat-new.aspx" class="menu-link">
+												<a href="/Pages/lecturer/lecturer-chat-new.aspx" class="menu-link">
 													<i class="menu-bullet menu-bullet-line">
 														<span></span>
 													</i>
@@ -374,7 +374,7 @@
 												</a>
 											</li>
 											<li class="menu-item" aria-haspopup="true">
-												<a href="lecturer-group-view.aspx" class="menu-link">
+												<a href="/Pages/lecturer/lecturer-group-view.aspx" class="menu-link">
 													<i class="menu-bullet menu-bullet-line">
 														<span></span>
 													</i>
