--- a/UmdlaloVirtualGaming/Lecturer.Master
+++ b/UmdlaloVirtualGaming/Lecturer.Master
@@ -27,6 +27,13 @@
 		<link href="Pages/assets/css/themes/layout/aside/dark.css?v=7.0.5" rel="stylesheet" type="text/css" />
 		<!--end::Layout Themes-->
 		<link rel="shortcut icon" href="/Pages/assets/media/logos/favicon.ico" />
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mouse0270-bootstrap-notify/3.1.3/bootstrap-notify.min.js" integrity="sha512-d0ZsJAyXsXlpeDNAhXj4mbaqpLfdyoOaQFmaFVG/KodZnAaVrdOsO9KiG62V7dcV+sHIFb7VTMmkB5JntAoq+Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<asp:ContentPlaceHolder ID="head" runat="server">
 	</asp:ContentPlaceHolder>
 </head>
@@ -37,7 +44,7 @@
 		<div id="kt_header_mobile" class="header-mobile align-items-center header-mobile-fixed">
 			<!--begin::Logo-->
 			<a href="index.html">
-				<img alt="Logo" src="/Pages/assets/media/logos/logo-light.png" />
+				<img alt="Logo" src="/Pages/assets/media/logos/logo-light.png" width="100%" height="70px"/>
 			</a>
 			<!--end::Logo-->
 			<!--begin::Toolbar-->
@@ -81,7 +88,7 @@
 					<div class="brand flex-column-auto" id="kt_brand">
 						<!--begin::Logo-->
 						<a href="index.html" class="brand-logo">
-							<img alt="Logo" src="/Pages/assets/media/logos/logo-light.png" />
+							<img alt="Logo" src="/Pages/assets/media/logos/logo-light.png" width="100%" height="70px"/>
 						</a>
 						<!--end::Logo-->
 						<!--begin::Toggle-->
@@ -1239,6 +1246,7 @@
 		<script src="/Pages/assets/plugins/global/plugins.bundle.js"></script>
 		<script src="/Pages/assets/plugins/custom/prismjs/prismjs.bundle.js"></script>
 		<script src="/Pages/assets/js/scripts.bundle.js"></script>
+        <script src="/Pages/assets/js/pages/features/miscellaneous/bootstrap-notify.js"></script>
 		<!--end::Global Theme Bundle-->
 		<!--begin::Page Vendors(used by this page)-->
 		<script src="/Pages/assets/plugins/custom/fullcalendar/fullcalendar.bundle.js"></script>
