--- a/UmdlaloVirtualGaming/Student.Master
+++ b/UmdlaloVirtualGaming/Student.Master
@@ -27,7 +27,13 @@
 	<!--end::Layout Themes-->
 	<link rel="shortcut icon" href="/Pages/assets/media/logos/favicon.ico" />
 
-
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mouse0270-bootstrap-notify/3.1.3/bootstrap-notify.min.js" integrity="sha512-d0ZsJAyXsXlpeDNAhXj4mbaqpLfdyoOaQFmaFVG/KodZnAaVrdOsO9KiG62V7dcV+sHIFb7VTMmkB5JntAoq+Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 
 
@@ -42,7 +48,7 @@
 		<div id="kt_header_mobile" class="header-mobile align-items-center header-mobile-fixed">
 			<!--begin::Logo-->
 			<a href="index.html">
-				<img alt="Logo" src="/Pages/assets/media/logos/logo-light.png" />
+				<img alt="Logo" src="/Pages/assets/media/logos/logo-light.png" width="50px" height="50px"/>
 			</a>
 			<!--end::Logo-->
 			<!--begin::Toolbar-->
@@ -86,7 +92,7 @@
 					<div class="brand flex-column-auto" id="kt_brand">
 						<!--begin::Logo-->
 						<a href="index.html" class="brand-logo">
-							<img alt="Logo" src="/Pages/assets/media/logos/logo-light.png" />
+							<img alt="Logo" src="/Pages/assets/media/logos/logo-light.png" width="100%" height="70px" />
 						</a>
 						<!--end::Logo-->
 						<!--begin::Toggle-->
@@ -212,7 +218,7 @@
 											</li>
 
 											<li class="menu-item" aria-haspopup="true">
-												<a href="student-project-view.aspx" class="menu-link">
+												<a href="personal-projects.aspx" class="menu-link">
 													<i class="menu-bullet menu-bullet-line">
 														<span></span>
 													</i>
@@ -222,7 +228,17 @@
 													</span>
 												</a>
 											</li>
-
+                                            <li class="menu-item" aria-haspopup="true">
+                                                <a href="create.aspx" class="menu-link">
+                                                    <i class="menu-bullet menu-bullet-line">
+                                                        <span></span>
+                                                    </i>
+                                                    <span class="menu-text">Create</span>
+                                                    <span class="menu-label">
+                                                        <span class="label label-danger label-inline">new</span>
+                                                    </span>
+                                                </a>
+                                            </li>
 										</ul>
 									</div>
 
@@ -953,7 +969,7 @@
 								</div>
 							</div>
 							<!--end::Container-->
-						</div>/
+						</div>
 						<!--end::Entry-->
 					</div>
 					<!--end::Content-->
@@ -1036,7 +1052,7 @@
 				<!--begin::Nav-->
 				<div class="navi navi-spacer-x-0 p-0">
 					<!--begin::Item-->
-					<a href="custom/apps/user/profile-1/personal-information.html" class="navi-item">
+					<a href="/Pages/student/student-profile-edit.aspx" class="navi-item">
 						<div class="navi-link">
 							<div class="symbol symbol-40 bg-light mr-3">
 								<div class="symbol-label">
@@ -1267,6 +1283,7 @@
 	<script src="/Pages/assets/plugins/global/plugins.bundle.js"></script>
 	<script src="/Pages/assets/plugins/custom/prismjs/prismjs.bundle.js"></script>
 	<script src="/Pages/assets/js/scripts.bundle.js"></script>
+<script src="/Pages/assets/js/pages/features/miscellaneous/bootstrap-notify.js"></script>
 	  
 	<!--end::Global Theme Bundle-->
 	<!--begin::Page Vendors(used by this page)-->
