--- a/UmdlaloVirtualGaming/Student.Master
+++ b/UmdlaloVirtualGaming/Student.Master
@@ -1041,7 +1041,7 @@
 									<span class="navi-text text-muted text-hover-primary" id="lblEmail" runat="server">jm@softplus.com</span>
 								</span>
 							</a>
-							<a href="#" class="btn btn-sm btn-light-primary font-weight-bolder py-2 px-5">Sign Out</a>
+							<a href="#" class="btn btn-sm btn-light-primary font-weight-bolder py-2 px-5" runat="server" onclick="Signout">Sign Out</a>
 						</div>
 					</div>
 				</div>
