--- a/UmdlaloVirtualGaming/Student.Master
+++ b/UmdlaloVirtualGaming/Student.Master
@@ -1016,7 +1016,7 @@
 				<!--begin::Header-->
 				<div class="d-flex align-items-center mt-5">
 					<div class="symbol symbol-100 mr-5">
-						<div class="symbol-label" style="background-image: url('assets/media/users/300_21.jpg')"></div>
+						<div class="symbol-label" style="background-image: url('/Pages/assets/media/svg/avatars/007-boy-2.svg ')"></div>
 						<i class="symbol-badge bg-success"></i>
 					</div>
 					<div class="d-flex flex-column">
