--- a/UmdlaloVirtualGaming/Admin.Master
+++ b/UmdlaloVirtualGaming/Admin.Master
@@ -182,9 +182,21 @@
 													<span class="menu-label">
 														<span class="label label-danger label-inline">new</span>
 													</span>
+
 												</a>
 											</li>
-											
+											<li class="menu-item" aria-haspopup="true">
+												<a href="/Pages/admin/admin-course-edit.aspx" class="menu-link">
+													<i class="menu-bullet menu-bullet-line">
+														<span></span>
+													</i>
+													<span class="menu-text">Edit Course</span>
+													<span class="menu-label">
+														<span class="label label-danger label-inline">new</span>
+													</span>
+
+												</a>
+											</li>
 										</ul>
 									</div>
 
@@ -227,23 +239,13 @@
 													<i class="menu-bullet menu-bullet-line">
 														<span></span>
 													</i>
-													<span class="menu-text">Add Student</span>
-													<span class="menu-label">
-														<span class="label label-danger label-inline">new</span>
-													</span>
-												</a>
-											</li>
-											<li class="menu-item" aria-haspopup="true">
-												<a href="custom/apps/inbox.html" class="menu-link">
-													<i class="menu-bullet menu-bullet-line">
-														<span></span>
-													</i>
 													<span class="menu-text">Enrol Student</span>
 													<span class="menu-label">
 														<span class="label label-danger label-inline">new</span>
 													</span>
 												</a>
 											</li>
+								
 											
 										</ul>
 									</div>
@@ -310,7 +312,7 @@
 
 								</li>
 								<li class="menu-item menu-item-submenu" aria-haspopup="true" data-menu-toggle="hover">
-									<a href="lecturer-projects-list.aspx" class="menu-link menu-toggle">
+									<a href="admin-projects-view.aspx" class="menu-link menu-toggle">
 										<span class="svg-icon menu-icon">
 											<!--begin::Svg Icon | path:/Pages/assets/media/svg/icons/Layout/Layout-4-blocks.svg-->
 											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
@@ -329,7 +331,7 @@
 
 								</li>
 								<li class="menu-item menu-item-submenu" aria-haspopup="true" data-menu-toggle="hover">
-									<a href="lecturer-calendar-view.aspx" class="menu-link menu-toggle">
+									<a href="admin-calendar-view.aspx" class="menu-link menu-toggle">
 										<span class="svg-icon menu-icon">
 											<!--begin::Svg Icon | path:/Pages/assets/media/svg/icons/Layout/Layout-4-blocks.svg-->
 											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
