--- a/UmdlaloVirtualGaming/Lecturer.Master
+++ b/UmdlaloVirtualGaming/Lecturer.Master
@@ -598,7 +598,7 @@
 					</a>
 					<!--end:Item-->
 					<!--begin::Item-->
-					<a href="custom/apps/user/profile-3.html" class="navi-item">
+					<a href="lecturer-chat-view.aspx" class="navi-item">
 						<div class="navi-link">
 							<div class="symbol symbol-40 bg-light mr-3">
 								<div class="symbol-label">
@@ -625,7 +625,7 @@
 					</a>
 					<!--end:Item-->
 					<!--begin::Item-->
-					<a href="custom/apps/user/profile-2.html" class="navi-item">
+					<a href="lecturer-student-list.aspx" class="navi-item">
 						<div class="navi-link">
 							<div class="symbol symbol-40 bg-light mr-3">
 								<div class="symbol-label">
@@ -643,14 +643,14 @@
 								</div>
 							</div>
 							<div class="navi-text">
-								<div class="font-weight-bold">My Activities</div>
-								<div class="text-muted">Logs and notifications</div>
+								<div class="font-weight-bold">View Students</div>
+								<div class="text-muted">Marks and More</div>
 							</div>
 						</div>
 					</a>
 					<!--end:Item-->
 					<!--begin::Item-->
-					<a href="custom/apps/userprofile-1/overview.html" class="navi-item">
+					<a href="lecturer-projects-list.aspx" class="navi-item">
 						<div class="navi-link">
 							<div class="symbol symbol-40 bg-light mr-3">
 								<div class="symbol-label">
@@ -668,7 +668,7 @@
 								</div>
 							</div>
 							<div class="navi-text">
-								<div class="font-weight-bold">My Tasks</div>
+								<div class="font-weight-bold">View Projects</div>
 								<div class="text-muted">latest tasks and projects</div>
 							</div>
 						</div>
