--- a/UmdlaloVirtualGaming/Student.Master
+++ b/UmdlaloVirtualGaming/Student.Master
@@ -524,22 +524,50 @@
 					</div>
 					<!--end::Header-->
 					<!--begin::Content-->
-					<div class="content d-flex flex-column flex-column-fluid" id="kt_content">
+                    <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
+                        <div class="subheader py-2 py-lg-6 subheader-solid" id="kt_subheader">
+                            <div class="container-fluid d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
+                                <!--begin::Info-->
+                                <div class="d-flex align-items-center flex-wrap mr-1">
+                                    <!--begin::Page Heading-->
+                                    <div class="d-flex align-items-baseline flex-wrap mr-5">
+                                        <!--begin::Page Title-->
+                                        <h5 class="text-dark font-weight-bold my-1 mr-5">Utilities</h5>
+                                        <!--end::Page Title-->
+                                        <!--begin::Breadcrumb-->
+                                        <ul class="breadcrumb breadcrumb-transparent breadcrumb-dot font-weight-bold p-0 my-2 font-size-sm">
+                                            <li class="breadcrumb-item text-muted">
+                                                <a href="" class="text-muted">Features</a>
+                                            </li>
+                                            <li class="breadcrumb-item text-muted">
+                                                <a href="" class="text-muted">Custom</a>
+                                            </li>
+                                            <li class="breadcrumb-item text-muted">
+                                                <a href="" class="text-muted">Utilities</a>
+                                            </li>
+                                        </ul>
+                                        <!--end::Breadcrumb-->
+                                    </div>
+                                    <!--end::Page Heading-->
+                                </div>
+                                <!--end::Info-->
+							
+                            </div>
+                        </div>
+                        <!--begin::Entry-->
+                        <div class="d-flex flex-column-fluid">
+                            <!--begin::Container-->
+                            <div class="container">
+                                <div>
 
-						<!--begin::Entry-->
-						<div class="d-flex flex-column-fluid">
-							<!--begin::Container-->
-							<div class="container">
-								<div>
-
-									<asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-									</asp:ContentPlaceHolder>
-								</div>
-							</div>
-							<!--end::Container-->
-						</div>
-						<!--end::Entry-->
-					</div>
+                                    <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                                    </asp:ContentPlaceHolder>
+                                </div>
+                            </div>
+                            <!--end::Container-->
+                        </div>
+                        <!--end::Entry-->
+                    </div>
 					<!--end::Content-->
 					<!--begin::Footer-->
 					<div class="footer bg-white py-4 d-flex flex-lg-column" id="kt_footer">
