--- a/UmdlaloVirtualGaming/Student.Master
+++ b/UmdlaloVirtualGaming/Student.Master
@@ -416,7 +416,7 @@
 								</li>
 
 								<li class="menu-item menu-item-submenu" aria-haspopup="true" data-menu-toggle="hover">
-									<a href="Journal.aspx" class="menu-link menu-toggle">
+									<a href="my-journals.aspx" class="menu-link menu-toggle">
 										<span class="svg-icon menu-icon">
 											<!--begin::Svg Icon | path:/Pages/assets/media/svg/icons/Layout/Layout-4-blocks.svg-->
 											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
