--- a/UmdlaloVirtualGaming/Student.Master
+++ b/UmdlaloVirtualGaming/Student.Master
@@ -229,6 +229,17 @@
 												</a>
 											</li>
                                             <li class="menu-item" aria-haspopup="true">
+                                                <a href="featured.aspx" class="menu-link">
+                                                    <i class="menu-bullet menu-bullet-line">
+                                                        <span></span>
+                                                    </i>
+                                                    <span class="menu-text">Featured Projects</span>
+                                                    <span class="menu-label">
+                                                        <span class="label label-danger label-inline">new</span>
+                                                    </span>
+                                                </a>
+                                            </li>
+                                            <li class="menu-item" aria-haspopup="true">
                                                 <a href="create.aspx" class="menu-link">
                                                     <i class="menu-bullet menu-bullet-line">
                                                         <span></span>
@@ -511,35 +522,7 @@
 					<!--end::Header-->
 					<!--begin::Content-->
                     <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
-                        <div class="subheader py-2 py-lg-6 subheader-solid" id="kt_subheader">
-                            <div class="container-fluid d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
-                                <!--begin::Info-->
-                                <div class="d-flex align-items-center flex-wrap mr-1">
-                                    <!--begin::Page Heading-->
-                                    <div class="d-flex align-items-baseline flex-wrap mr-5">
-                                        <!--begin::Page Title-->
-                                        <h5 class="text-dark font-weight-bold my-1 mr-5">Utilities</h5>
-                                        <!--end::Page Title-->
-                                        <!--begin::Breadcrumb-->
-                                        <ul class="breadcrumb breadcrumb-transparent breadcrumb-dot font-weight-bold p-0 my-2 font-size-sm">
-                                            <li class="breadcrumb-item text-muted">
-                                                <a href="" class="text-muted">Features</a>
-                                            </li>
-                                            <li class="breadcrumb-item text-muted">
-                                                <a href="" class="text-muted">Custom</a>
-                                            </li>
-                                            <li class="breadcrumb-item text-muted">
-                                                <a href="" class="text-muted">Utilities</a>
-                                            </li>
-                                        </ul>
-                                        <!--end::Breadcrumb-->
-                                    </div>
-                                    <!--end::Page Heading-->
-                                </div>
-                                <!--end::Info-->
-							
-                            </div>
-                        </div>
+                        
                         <!--begin::Entry-->
                         <div class="d-flex flex-column-fluid">
                             <!--begin::Container-->
@@ -562,14 +545,14 @@
 							<!--begin::Copyright-->
 							<div class="text-dark order-2 order-md-1">
 								<span class="text-muted font-weight-bold mr-2">2021©</span>
-								<a href="http://keenthemes.com/metronic" target="_blank" class="text-dark-75 text-hover-primary">Enactus UJ</a>
+								<a href="http://www.enactusza.org/" target="_blank" class="text-dark-75 text-hover-primary">Enactus UJ</a>
 							</div>
 							<!--end::Copyright-->
 							<!--begin::Nav-->
 							<div class="nav nav-dark">
-								<a href="http://keenthemes.com/metronic" target="_blank" class="nav-link pl-0 pr-5">About</a>
+								<a href="#" target="_blank" class="nav-link pl-0 pr-5">About</a>
 
-								<a href="http://keenthemes.com/metronic" target="_blank" class="nav-link pl-0 pr-0">Contact</a>
+								<a href="#" target="_blank" class="nav-link pl-0 pr-0">Contact</a>
 							</div>
 							<!--end::Nav-->
 						</div>
